# Verslang

./: .gitignore  CMakeLists.txt  README.md  build.bat  package.json  test_2dll_simple.vlang  test_exit.vlang  test_exit_gui.vlang  test_gsm.vlang  test_gui1.vlang  test_minimal.vlang  test_minimal_2dll.vlang  test_msgbox.vlang  test_msgbox2.vlang  test_msgbox3.vlang  test_msgonly.vlang  test_msvc.c  test_multidll.vlang  test_multidll2.vlang  test_nodll_call.vlang  test_ref.c  test_trace.vlang
.github/workflows/: build.yml
examples/: bootloader.vlang  fibonacci.vlang  hello.vlang  hello_win.vlang  kernel_io.vlang  structures.vlang
src/: main.cpp
src/codegen/: elf.h  pe.h  x86_64.cpp  x86_64.h
src/compiler/: compiler.cpp  compiler.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: ast.h  parser.cpp  parser.h
